# apigenie

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  accounts.py  admin.py  alert_enrichment.py  alert_push.py  alerts.py  app.py  attack_scenarios.py  attack_scenarios_library.py  auth.py  avatars.py  bans.py  bus_monitor.py  crypto.py  curl  detection_rules.py  docker-compose.yaml  event_mix.py  generators.py  geoip.py  intrusions.py  listeners.py  listeners_grpc.py  listeners_otlp.py  log_pusher.py  otlp_pusher.py  personas.py  profiles.py  pyproject.toml  replay.py  request_log.py  s1_assets.py  s1_detection_library.py  s1_field_mapper.py  scenario_narrative.py  (+9 more)
alert_templates/: advanced_sample_alert.json  default_alert.json  o365_admin_consent_all.json  o365_antiphish_rule_disabled.json  o365_app_role_assigned.json  o365_attachment_removed.json  o365_audit_bypass.json  o365_auto_delete_rule.json  o365_bec_inbox_rule.json  o365_bec_rss_redirect.json  o365_bec_short_param.json  o365_brute_force_success.json  o365_ca_policy_deleted.json  o365_ca_policy_updated.json  o365_cloudsponge_activity.json  o365_connector_removed.json  o365_copilot_jailbreak.json  o365_dlp_policy_deleted.json  o365_emclient_activity.json  o365_external_redirection.json  o365_fasthttp_activity.json  o365_fastmail_activity.json  o365_federation_domain.json  o365_forwarding_rule.json  o365_full_access_app.json  o365_inbound_connector.json  o365_inbox_rule_redirect.json  o365_intune_ca_bypass.json  o365_mail_transport_rule.json  o365_mailbox_delegation.json  o365_malware_filter_disabled.json  o365_malware_policy_deleted.json  o365_management_group_role.json  o365_noncompliant_login.json  o365_oauth_email_name.json  o365_oauth_nonalpha.json  o365_outbound_connector.json  o365_perfectdata_activity.json  o365_rclone_download.json  o365_rclone_modify.json  (+32 more)
docs/: ADMIN_GUIDE.md  ALERT_PUSH.md  API Genie - The Guide.md  ATTACK_SCENARIOS.md  AWS_DEPLOYMENT.md  ApiGenie_Capacity_Report.md  BINDING_RECIPE_FOR_HELIOS.md  CUSTOM_LISTENERS.md  EVENT_MIX.md  LOCALSTACK_PLAN.md  (+12 more)
(+184 files in other folders)
