[project]
name = "apigenie"
version = "5.1.5"
description = "Multi-user, self-contained mock server for 19 security platform APIs + Azure Event Hubs (Kafka) + GCP Cloud Logging (Pub/Sub). Operators reshape what every source emits (Event Mix), fire shaped HTTPS payloads at any endpoint (Webhooks), and run multi-source MITRE-mapped attack campaigns (Attack Scenarios)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "kafka-python>=2.0.2",
    "google-cloud-pubsub>=2.27.0",
    "pydantic>=2.10.0",
    "maxminddb>=2.6.0",
    "pillow>=11.0.0",
    # OpenTelemetry Custom Listener (push sink) — see docs/OTEL_LISTENER.md
    "opentelemetry-proto>=1.27.0",
    "grpcio>=1.65.0",
    # Encrypted-at-rest secrets (Fernet) — see crypto.py
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
